apis/careerpath/deploy/deploy.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: careerpath
  labels:
    app: careerpath
    service: careerpath
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: careerpath
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careerpath
  labels:
    app: careerpath
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careerpath
      version: v1
  template:
    metadata:
      labels:
        app: careerpath
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: skyhive
      hostAliases:
        - ip: 15.222.74.209
          hostnames:
            - dev-e.skyhive.io
      containers:
        - name: careerpath
          image: 596298976885.dkr.ecr.ca-central-1.amazonaws.com/careerpath:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careerpath
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /careerpath/
            pathType: Prefix
            backend:
              service:
                name: careerpath
                port:
                  number: 8080
